Cloudflare Challenge people why scan for mysql admin panels and WordPress admin

--- a/.env.sample
+++ b/.env.sample
@@ -13,3 +13,8 @@ SPOTIFY_REDIRECT_URI=
 # Twitch
 TWITCH_CLIENT_ID=
 TWITCH_CHANNEL=51684790
+
+# Cloudflare
+CLOUDFLARE_ZONE=
+CLOUDFLARE_KEY=
+CLOUDFLARE_EMAIL=
