--- a/.env.sample
+++ b/.env.sample
@@ -4,6 +4,7 @@ SERVER_PORT=8887
 
 # WeetBot
 WEETBOT_COMMAND_KEY=WeetBot::command::#modesttim::
+WEETBOT_COMMAND_KEY=WeetBot::total::#modesttim::
 
 # Spotify
 SPOTIFY_CLIENT_ID=
